# honeypot-bot

./: .gitignore  Cargo.toml  README.md  flake.nix  garnix.yaml  windows-tmp.nix
.github/workflows/: main.yaml
ci/: default.nix
dev-flake/: flake-module.nix  flake.nix
src/: config.rs  handler.rs  main.rs
